Added "previous widget" button

--- a/ExpressionsDialog.ui
+++ b/ExpressionsDialog.ui
@@ -32,6 +32,13 @@
      <item>
       <layout class="QHBoxLayout" name="buttonLayout">
        <item>
+        <widget class="QPushButton" name="backButton">
+         <property name="text">
+          <string>Назад</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
