--- a/ConditionDialog.ui
+++ b/ConditionDialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QVBoxLayout" name="generalLayout" stretch="0,0,0,0">
+    <layout class="QVBoxLayout" name="generalLayout" stretch="0,0,1,1,0,2">
      <item>
       <layout class="QHBoxLayout" name="varLayout" stretch="1,0">
        <item>
@@ -38,7 +38,7 @@
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="exprHorizontalLayout" stretch="1,0">
+      <layout class="QHBoxLayout" name="exprLayout" stretch="1,0">
        <item>
         <widget class="QLabel" name="exprLabel">
          <property name="text">
@@ -59,7 +59,7 @@
       </layout>
      </item>
      <item>
-      <spacer name="verticalSpacer">
+      <spacer name="verticalSpacer_2">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -72,7 +72,40 @@
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="buttonLayout">
+      <layout class="QHBoxLayout" name="questLayout">
+       <item>
+        <widget class="QLabel" name="questLabel">
+         <property name="text">
+          <string>Можно ли решить графическим методом?</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="buttonsLayout" stretch="1,2,1">
+       <property name="spacing">
+        <number>-1</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="yesButton">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Да</string>
+         </property>
+        </widget>
+       </item>
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
@@ -87,13 +120,32 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="nextButton">
+        <widget class="QPushButton" name="noButton">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
-          <string>Далее</string>
+          <string>Нет</string>
          </property>
         </widget>
        </item>
       </layout>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
