--- a/ExpressionsDialog.ui
+++ b/ExpressionsDialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0">
      <item>
       <layout class="QHBoxLayout" name="functionLayout"/>
      </item>
@@ -30,7 +30,48 @@
       <layout class="QVBoxLayout" name="exprLayout"/>
      </item>
      <item>
-      <spacer name="verticalSpacer">
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="questLayout" stretch="0,6,0">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Можно решить графическим способом?</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBox">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <spacer name="verticalSpacer_2">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -43,7 +84,7 @@
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="buttonLayout">
+      <layout class="QHBoxLayout" name="buttonLayout" stretch="1,6,1">
        <item>
         <widget class="QPushButton" name="backButton">
          <property name="text">
