--- a/drawdialog.ui
+++ b/drawdialog.ui
@@ -16,9 +16,9 @@
   <widget class="QPushButton" name="checkPushButton">
    <property name="geometry">
     <rect>
-     <x>416</x>
-     <y>40</y>
-     <width>141</width>
+     <x>440</x>
+     <y>410</y>
+     <width>131</width>
      <height>27</height>
     </rect>
    </property>
@@ -26,17 +26,80 @@
     <string>check new feature</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QDoubleSpinBox" name="doubleSpinBox">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>80</y>
-     <width>97</width>
+     <x>230</x>
+     <y>410</y>
+     <width>61</width>
      <height>27</height>
     </rect>
    </property>
-   <property name="text">
-    <string>PushButton</string>
+   <property name="decimals">
+    <number>1</number>
+   </property>
+   <property name="minimum">
+    <double>-100.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>99999.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>410</y>
+     <width>62</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>1</number>
+   </property>
+   <property name="minimum">
+    <double>-100.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>99999.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_3">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>410</y>
+     <width>62</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>1</number>
+   </property>
+   <property name="minimum">
+    <double>-100.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>99999.000000000000000</double>
+   </property>
+  </widget>
+  <widget class="QDoubleSpinBox" name="doubleSpinBox_4">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>410</y>
+     <width>62</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="decimals">
+    <number>1</number>
+   </property>
+   <property name="singleStep">
+    <double>0.100000000000000</double>
+   </property>
+   <property name="value">
+    <double>1.000000000000000</double>
    </property>
   </widget>
  </widget>
