--- a/GraphDialog1.ui
+++ b/GraphDialog1.ui
@@ -15,9 +15,43 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QVBoxLayout" name="generalLayout" stretch="0,0,0,0">
+    <layout class="QVBoxLayout" name="generalLayout" stretch="0,0,0,0,0">
      <item>
-      <layout class="QHBoxLayout" name="paintLayout"/>
+      <widget class="QLabel" name="infLabel">
+       <property name="text">
+        <string>Для выбора нужной области, кликните по ней</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="paintLayout">
+       <item>
+        <spacer name="horizontalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item>
       <spacer name="verticalSpacer">
