--- a/ConditionDialog.ui
+++ b/ConditionDialog.ui
@@ -15,7 +15,14 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QVBoxLayout" name="generalLayout" stretch="0,0,0,0">
+    <layout class="QVBoxLayout" name="generalLayout" stretch="0,0,0,0,0">
+     <item>
+      <widget class="QLabel" name="infLabel">
+       <property name="text">
+        <string>Условие:</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <layout class="QHBoxLayout" name="varLayout" stretch="1,0">
        <item>
