--- a/GraphDialog2.ui
+++ b/GraphDialog2.ui
@@ -17,7 +17,41 @@
    <item>
     <layout class="QVBoxLayout" name="generalLayout">
      <item>
-      <layout class="QHBoxLayout" name="paintLayout"/>
+      <widget class="QLabel" name="infLabel">
+       <property name="text">
+        <string>Выберите точки, где функция Z минимальна и максимальна:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="paintLayout">
+       <item>
+        <spacer name="horizontalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item>
       <spacer name="verticalSpacer">
