Final Release!!! But we still have a some tasks!

--- a/GraphDialog1.ui
+++ b/GraphDialog1.ui
@@ -89,15 +89,15 @@
         </spacer>
        </item>
        <item>
-        <widget class="QDoubleSpinBox" name="skaleSpinBox">
+        <widget class="QDoubleSpinBox" name="scaleSpinBox">
          <property name="minimum">
           <double>0.100000000000000</double>
          </property>
          <property name="maximum">
-          <double>20.100000000000001</double>
+          <double>60.100000000000001</double>
          </property>
          <property name="singleStep">
-          <double>0.200000000000000</double>
+          <double>0.400000000000000</double>
          </property>
          <property name="value">
           <double>1.000000000000000</double>
