--- a/FinishDialog.ui
+++ b/FinishDialog.ui
@@ -15,11 +15,14 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,3">
+    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0,0,0,0,3">
      <item>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="resultLabel">
        <property name="text">
         <string>Результат:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
@@ -29,7 +32,44 @@
         <string/>
        </property>
        <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="answerLabel">
+       <property name="text">
+        <string>Ответ:</string>
+       </property>
+       <property name="alignment">
         <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="minLabel">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="maxLabel">
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
